# synergy-battery-analyser

./: .gitignore  README.md  pyproject.toml  synergy-battery-analyser.spec
.github/workflows/: release.yml
src/: battery.py  main.py  models.py  synergy_client.py  tariff.py
src/static/: app.js  index.html  style.css
tests/: conftest.py  test_battery.py  test_models.py  test_routes.py  test_synergy_client.py  test_tariff.py
