[project]
name = "synergy-analyser"
version = "0.1.0"
description = "Analyse Synergy (WA) electricity usage data to determine home battery feasibility and ROI"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "uvicorn[standard]>=0.41.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"synergy_analyser" = "src"

[tool.setuptools.package-data]
"synergy_analyser" = ["static/**/*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
